// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render export dialog 1`] = `
<Overlay
  actions={Array []}
  confirmDisabled={false}
  confirmLoading={false}
  confirmText="Export"
  key="sulu_admin.export"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
  size="small"
>
  <Backdrop
    fixed={true}
    local={false}
    onClick={[Function]}
    open={true}
    visible={true}
  >
    <Portal>
      <Portal
        containerInfo={
          <div>
            <div
              class="backdrop visible fixed"
            />
          </div>
        }
      >
        <div
          className="backdrop visible fixed"
          onClick={[Function]}
        />
      </Portal>
    </Portal>
  </Backdrop>
  <Portal>
    <Portal
      containerInfo={
        <div>
          <div
            class="container"
          >
            <div
              class="overlay small"
            >
              <section
                class="content"
              >
                <header>
                  <h2 />
                  <span
                    aria-label="su-times"
                    class="su-times clickable icon"
                    role="button"
                    tabindex="0"
                  />
                </header>
                <article>
                  <div
                    class="overlay"
                  >
                    <div
                      class="grid grid"
                    >
                      <div
                        class="section gridSection size size-6 space-before-0 space-after-0"
                      >
                        <div
                          class="item gridItem size size-12 space-before-0 space-after-0"
                        >
                          <div
                            class="field"
                          >
                            <div
                              class="select"
                            >
                              <button
                                class="displayValue default"
                                type="button"
                              >
                                <div
                                  aria-label=";"
                                  class="croppedText"
                                  title=";"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="front"
                                  >
                                    ;
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="back"
                                  >
                                    <span />
                                  </div>
                                  <div
                                    class="whole"
                                  >
                                    ;
                                  </div>
                                </div>
                                <span
                                  aria-label="su-angle-down"
                                  class="su-angle-down toggle"
                                />
                              </button>
                            </div>
                            <label
                              class="errorLabel"
                            />
                          </div>
                        </div>
                        <div
                          class="item gridItem size size-12 space-before-0 space-after-0"
                        >
                          <div
                            class="field"
                          >
                            <div
                              class="select"
                            >
                              <button
                                class="displayValue default"
                                type="button"
                              >
                                <div
                                  aria-label="\\""
                                  class="croppedText"
                                  title="\\""
                                >
                                  <div
                                    aria-hidden="true"
                                    class="front"
                                  >
                                    "
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="back"
                                  >
                                    <span />
                                  </div>
                                  <div
                                    class="whole"
                                  >
                                    "
                                  </div>
                                </div>
                                <span
                                  aria-label="su-angle-down"
                                  class="su-angle-down toggle"
                                />
                              </button>
                            </div>
                            <label
                              class="errorLabel"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="section gridSection size size-6 space-before-0 space-after-0"
                      >
                        <div
                          class="item gridItem size size-12 space-before-0 space-after-0"
                        >
                          <div
                            class="field"
                          >
                            <div
                              class="select"
                            >
                              <button
                                class="displayValue default"
                                type="button"
                              >
                                <div
                                  aria-label="\\\\"
                                  class="croppedText"
                                  title="\\\\"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="front"
                                  >
                                    \\
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="back"
                                  >
                                    <span />
                                  </div>
                                  <div
                                    class="whole"
                                  >
                                    \\
                                  </div>
                                </div>
                                <span
                                  aria-label="su-angle-down"
                                  class="su-angle-down toggle"
                                />
                              </button>
                            </div>
                            <label
                              class="errorLabel"
                            />
                          </div>
                        </div>
                        <div
                          class="item gridItem size size-12 space-before-0 space-after-0"
                        >
                          <div
                            class="field"
                          >
                            <div
                              class="select"
                            >
                              <button
                                class="displayValue default"
                                type="button"
                              >
                                <div
                                  aria-label="\\\\n"
                                  class="croppedText"
                                  title="\\\\n"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="front"
                                  >
                                    \\
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="back"
                                  >
                                    <span>
                                      n
                                    </span>
                                  </div>
                                  <div
                                    class="whole"
                                  >
                                    \\n
                                  </div>
                                </div>
                                <span
                                  aria-label="su-angle-down"
                                  class="su-angle-down toggle"
                                />
                              </button>
                            </div>
                            <label
                              class="errorLabel"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </article>
                <footer>
                  <button
                    class="button primary"
                    type="button"
                  >
                    <span
                      class="text"
                    >
                      Export
                    </span>
                  </button>
                </footer>
              </section>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="container"
        onTransitionEnd={[Function]}
      >
        <div
          className="overlay small"
        >
          <section
            className="content"
          >
            <header>
              <h2 />
              <Icon
                className="icon"
                name="su-times"
                onClick={[Function]}
              >
                <span
                  aria-label="su-times"
                  className="su-times clickable icon"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                />
              </Icon>
            </header>
            <article>
              <div
                className="overlay"
              >
                <Form>
                  <Grid
                    className="grid"
                  >
                    <div
                      className="grid grid"
                    >
                      <Section
                        size={6}
                      >
                        <Section
                          className="gridSection"
                          size={6}
                          spaceAfter={0}
                          spaceBefore={0}
                        >
                          <BaseItem
                            className="section gridSection"
                            size={6}
                            spaceAfter={0}
                            spaceBefore={0}
                          >
                            <div
                              className="section gridSection size size-6 space-before-0 space-after-0"
                            >
                              <Field
                                required={false}
                                size={12}
                                spaceAfter={0}
                              >
                                <Item
                                  className="gridItem"
                                  size={12}
                                  spaceAfter={0}
                                  spaceBefore={0}
                                >
                                  <BaseItem
                                    className="item gridItem"
                                    size={12}
                                    spaceAfter={0}
                                    spaceBefore={0}
                                  >
                                    <div
                                      className="item gridItem size size-12 space-before-0 space-after-0"
                                    >
                                      <div
                                        className="field"
                                      >
                                        <SingleSelect
                                          disabled={false}
                                          onChange={[Function]}
                                          skin="default"
                                          value=";"
                                        >
                                          <Select
                                            closeOnSelect={true}
                                            disabled={false}
                                            displayValue=";"
                                            isOptionSelected={[Function]}
                                            onSelect={[Function]}
                                            skin="default"
                                          >
                                            <div
                                              className="select"
                                            >
                                              <DisplayValue
                                                disabled={false}
                                                displayValueRef={[Function]}
                                                onClick={[Function]}
                                                skin="default"
                                              >
                                                <button
                                                  className="displayValue default"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  type="button"
                                                >
                                                  <CroppedText>
                                                    <div
                                                      aria-label=";"
                                                      className="croppedText"
                                                      title=";"
                                                    >
                                                      <div
                                                        aria-hidden={true}
                                                        className="front"
                                                      >
                                                        ;
                                                      </div>
                                                      <div
                                                        aria-hidden={true}
                                                        className="back"
                                                      >
                                                        <span />
                                                      </div>
                                                      <div
                                                        className="whole"
                                                      >
                                                        ;
                                                      </div>
                                                    </div>
                                                  </CroppedText>
                                                  <Icon
                                                    className="toggle"
                                                    name="su-angle-down"
                                                  >
                                                    <span
                                                      aria-label="su-angle-down"
                                                      className="su-angle-down toggle"
                                                    />
                                                  </Icon>
                                                </button>
                                              </DisplayValue>
                                              <Popover
                                                anchorElement={
                                                  <button
                                                    class="displayValue default"
                                                    type="button"
                                                  >
                                                    <div
                                                      aria-label=";"
                                                      class="croppedText"
                                                      title=";"
                                                    >
                                                      <div
                                                        aria-hidden="true"
                                                        class="front"
                                                      >
                                                        ;
                                                      </div>
                                                      <div
                                                        aria-hidden="true"
                                                        class="back"
                                                      >
                                                        <span />
                                                      </div>
                                                      <div
                                                        class="whole"
                                                      >
                                                        ;
                                                      </div>
                                                    </div>
                                                    <span
                                                      aria-label="su-angle-down"
                                                      class="su-angle-down toggle"
                                                    />
                                                  </button>
                                                }
                                                backdrop={true}
                                                horizontalOffset={-20}
                                                onClose={[Function]}
                                                open={false}
                                                verticalOffset={2}
                                              />
                                            </div>
                                          </Select>
                                        </SingleSelect>
                                        <label
                                          className="errorLabel"
                                        />
                                      </div>
                                    </div>
                                  </BaseItem>
                                </Item>
                              </Field>
                              <Field
                                required={false}
                                size={12}
                                spaceAfter={0}
                              >
                                <Item
                                  className="gridItem"
                                  size={12}
                                  spaceAfter={0}
                                  spaceBefore={0}
                                >
                                  <BaseItem
                                    className="item gridItem"
                                    size={12}
                                    spaceAfter={0}
                                    spaceBefore={0}
                                  >
                                    <div
                                      className="item gridItem size size-12 space-before-0 space-after-0"
                                    >
                                      <div
                                        className="field"
                                      >
                                        <SingleSelect
                                          disabled={false}
                                          onChange={[Function]}
                                          skin="default"
                                          value="\\""
                                        >
                                          <Select
                                            closeOnSelect={true}
                                            disabled={false}
                                            displayValue="\\""
                                            isOptionSelected={[Function]}
                                            onSelect={[Function]}
                                            skin="default"
                                          >
                                            <div
                                              className="select"
                                            >
                                              <DisplayValue
                                                disabled={false}
                                                displayValueRef={[Function]}
                                                onClick={[Function]}
                                                skin="default"
                                              >
                                                <button
                                                  className="displayValue default"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  type="button"
                                                >
                                                  <CroppedText>
                                                    <div
                                                      aria-label="\\""
                                                      className="croppedText"
                                                      title="\\""
                                                    >
                                                      <div
                                                        aria-hidden={true}
                                                        className="front"
                                                      >
                                                        "
                                                      </div>
                                                      <div
                                                        aria-hidden={true}
                                                        className="back"
                                                      >
                                                        <span />
                                                      </div>
                                                      <div
                                                        className="whole"
                                                      >
                                                        "
                                                      </div>
                                                    </div>
                                                  </CroppedText>
                                                  <Icon
                                                    className="toggle"
                                                    name="su-angle-down"
                                                  >
                                                    <span
                                                      aria-label="su-angle-down"
                                                      className="su-angle-down toggle"
                                                    />
                                                  </Icon>
                                                </button>
                                              </DisplayValue>
                                              <Popover
                                                anchorElement={
                                                  <button
                                                    class="displayValue default"
                                                    type="button"
                                                  >
                                                    <div
                                                      aria-label="\\""
                                                      class="croppedText"
                                                      title="\\""
                                                    >
                                                      <div
                                                        aria-hidden="true"
                                                        class="front"
                                                      >
                                                        "
                                                      </div>
                                                      <div
                                                        aria-hidden="true"
                                                        class="back"
                                                      >
                                                        <span />
                                                      </div>
                                                      <div
                                                        class="whole"
                                                      >
                                                        "
                                                      </div>
                                                    </div>
                                                    <span
                                                      aria-label="su-angle-down"
                                                      class="su-angle-down toggle"
                                                    />
                                                  </button>
                                                }
                                                backdrop={true}
                                                horizontalOffset={-20}
                                                onClose={[Function]}
                                                open={false}
                                                verticalOffset={2}
                                              />
                                            </div>
                                          </Select>
                                        </SingleSelect>
                                        <label
                                          className="errorLabel"
                                        />
                                      </div>
                                    </div>
                                  </BaseItem>
                                </Item>
                              </Field>
                            </div>
                          </BaseItem>
                        </Section>
                      </Section>
                      <Section
                        size={6}
                      >
                        <Section
                          className="gridSection"
                          size={6}
                          spaceAfter={0}
                          spaceBefore={0}
                        >
                          <BaseItem
                            className="section gridSection"
                            size={6}
                            spaceAfter={0}
                            spaceBefore={0}
                          >
                            <div
                              className="section gridSection size size-6 space-before-0 space-after-0"
                            >
                              <Field
                                required={false}
                                size={12}
                                spaceAfter={0}
                              >
                                <Item
                                  className="gridItem"
                                  size={12}
                                  spaceAfter={0}
                                  spaceBefore={0}
                                >
                                  <BaseItem
                                    className="item gridItem"
                                    size={12}
                                    spaceAfter={0}
                                    spaceBefore={0}
                                  >
                                    <div
                                      className="item gridItem size size-12 space-before-0 space-after-0"
                                    >
                                      <div
                                        className="field"
                                      >
                                        <SingleSelect
                                          disabled={false}
                                          onChange={[Function]}
                                          skin="default"
                                          value="\\\\"
                                        >
                                          <Select
                                            closeOnSelect={true}
                                            disabled={false}
                                            displayValue="\\\\"
                                            isOptionSelected={[Function]}
                                            onSelect={[Function]}
                                            skin="default"
                                          >
                                            <div
                                              className="select"
                                            >
                                              <DisplayValue
                                                disabled={false}
                                                displayValueRef={[Function]}
                                                onClick={[Function]}
                                                skin="default"
                                              >
                                                <button
                                                  className="displayValue default"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  type="button"
                                                >
                                                  <CroppedText>
                                                    <div
                                                      aria-label="\\\\"
                                                      className="croppedText"
                                                      title="\\\\"
                                                    >
                                                      <div
                                                        aria-hidden={true}
                                                        className="front"
                                                      >
                                                        \\
                                                      </div>
                                                      <div
                                                        aria-hidden={true}
                                                        className="back"
                                                      >
                                                        <span />
                                                      </div>
                                                      <div
                                                        className="whole"
                                                      >
                                                        \\
                                                      </div>
                                                    </div>
                                                  </CroppedText>
                                                  <Icon
                                                    className="toggle"
                                                    name="su-angle-down"
                                                  >
                                                    <span
                                                      aria-label="su-angle-down"
                                                      className="su-angle-down toggle"
                                                    />
                                                  </Icon>
                                                </button>
                                              </DisplayValue>
                                              <Popover
                                                anchorElement={
                                                  <button
                                                    class="displayValue default"
                                                    type="button"
                                                  >
                                                    <div
                                                      aria-label="\\\\"
                                                      class="croppedText"
                                                      title="\\\\"
                                                    >
                                                      <div
                                                        aria-hidden="true"
                                                        class="front"
                                                      >
                                                        \\
                                                      </div>
                                                      <div
                                                        aria-hidden="true"
                                                        class="back"
                                                      >
                                                        <span />
                                                      </div>
                                                      <div
                                                        class="whole"
                                                      >
                                                        \\
                                                      </div>
                                                    </div>
                                                    <span
                                                      aria-label="su-angle-down"
                                                      class="su-angle-down toggle"
                                                    />
                                                  </button>
                                                }
                                                backdrop={true}
                                                horizontalOffset={-20}
                                                onClose={[Function]}
                                                open={false}
                                                verticalOffset={2}
                                              />
                                            </div>
                                          </Select>
                                        </SingleSelect>
                                        <label
                                          className="errorLabel"
                                        />
                                      </div>
                                    </div>
                                  </BaseItem>
                                </Item>
                              </Field>
                              <Field
                                required={false}
                                size={12}
                                spaceAfter={0}
                              >
                                <Item
                                  className="gridItem"
                                  size={12}
                                  spaceAfter={0}
                                  spaceBefore={0}
                                >
                                  <BaseItem
                                    className="item gridItem"
                                    size={12}
                                    spaceAfter={0}
                                    spaceBefore={0}
                                  >
                                    <div
                                      className="item gridItem size size-12 space-before-0 space-after-0"
                                    >
                                      <div
                                        className="field"
                                      >
                                        <SingleSelect
                                          disabled={false}
                                          onChange={[Function]}
                                          skin="default"
                                          value="\\\\n"
                                        >
                                          <Select
                                            closeOnSelect={true}
                                            disabled={false}
                                            displayValue="\\\\n"
                                            isOptionSelected={[Function]}
                                            onSelect={[Function]}
                                            skin="default"
                                          >
                                            <div
                                              className="select"
                                            >
                                              <DisplayValue
                                                disabled={false}
                                                displayValueRef={[Function]}
                                                onClick={[Function]}
                                                skin="default"
                                              >
                                                <button
                                                  className="displayValue default"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  type="button"
                                                >
                                                  <CroppedText>
                                                    <div
                                                      aria-label="\\\\n"
                                                      className="croppedText"
                                                      title="\\\\n"
                                                    >
                                                      <div
                                                        aria-hidden={true}
                                                        className="front"
                                                      >
                                                        \\
                                                      </div>
                                                      <div
                                                        aria-hidden={true}
                                                        className="back"
                                                      >
                                                        <span>
                                                          n
                                                        </span>
                                                      </div>
                                                      <div
                                                        className="whole"
                                                      >
                                                        \\n
                                                      </div>
                                                    </div>
                                                  </CroppedText>
                                                  <Icon
                                                    className="toggle"
                                                    name="su-angle-down"
                                                  >
                                                    <span
                                                      aria-label="su-angle-down"
                                                      className="su-angle-down toggle"
                                                    />
                                                  </Icon>
                                                </button>
                                              </DisplayValue>
                                              <Popover
                                                anchorElement={
                                                  <button
                                                    class="displayValue default"
                                                    type="button"
                                                  >
                                                    <div
                                                      aria-label="\\\\n"
                                                      class="croppedText"
                                                      title="\\\\n"
                                                    >
                                                      <div
                                                        aria-hidden="true"
                                                        class="front"
                                                      >
                                                        \\
                                                      </div>
                                                      <div
                                                        aria-hidden="true"
                                                        class="back"
                                                      >
                                                        <span>
                                                          n
                                                        </span>
                                                      </div>
                                                      <div
                                                        class="whole"
                                                      >
                                                        \\n
                                                      </div>
                                                    </div>
                                                    <span
                                                      aria-label="su-angle-down"
                                                      class="su-angle-down toggle"
                                                    />
                                                  </button>
                                                }
                                                backdrop={true}
                                                horizontalOffset={-20}
                                                onClose={[Function]}
                                                open={false}
                                                verticalOffset={2}
                                              />
                                            </div>
                                          </Select>
                                        </SingleSelect>
                                        <label
                                          className="errorLabel"
                                        />
                                      </div>
                                    </div>
                                  </BaseItem>
                                </Item>
                              </Field>
                            </div>
                          </BaseItem>
                        </Section>
                      </Section>
                    </div>
                  </Grid>
                </Form>
              </div>
            </article>
            <footer>
              <Actions
                actions={Array []}
              />
              <Button
                active={false}
                disabled={false}
                loading={false}
                onClick={[Function]}
                showDropdownIcon={false}
                size="large"
                skin="primary"
                type="button"
              >
                <button
                  className="button primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="text"
                  >
                    Export
                  </span>
                </button>
              </Button>
            </footer>
          </section>
        </div>
      </div>
    </Portal>
  </Portal>
</Overlay>
`;

exports[`Should render the list with a title 1`] = `
<div>
  <div
    class="listContainer"
  >
    <div
      class="headerContainer"
    >
      <h1
        class="header"
      >
        Snippets
      </h1>
      <div
        class="toolbar"
      >
        <label
          class="input dark left collapsed hasAppendIcon"
        >
          <div
            class="prependedContainer dark collapsed"
          >
            <span
              aria-label="su-search"
              class="su-search clickable icon dark iconClickable collapsed"
              role="button"
              tabindex="0"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </label>
        <div>
          <button
            class="button icon"
            type="button"
          >
            <span
              aria-label="su-sort"
              class="su-sort buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div
          class="tableContainer"
        >
          <table
            class="table"
          >
            <thead
              class="header"
            >
              <tr>
                <th
                  class="headerCell"
                >
                  <span>
                    <label
                      class="label"
                    >
                      <span
                        class="switch checkbox light"
                      >
                        <input
                          type="checkbox"
                        />
                        <span />
                      </span>
                    </label>
                  </span>
                </th>
                <th
                  class="headerCell clickable"
                >
                  <button>
                    Description
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="cell small"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="1"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    Description 1
                  </div>
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="cell small"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="2"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    Description 2
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="pagination"
        >
          <span
            class="display"
          >
            :
          </span>
          <span>
            <div
              class="select"
            >
              <button
                class="displayValue dark"
                type="button"
              >
                <div
                  aria-label="10"
                  class="croppedText"
                  title="10"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    1
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    10
                  </div>
                </div>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down toggle"
                />
              </button>
            </div>
          </span>
          <div
            class="loader"
          />
          <span>
            Page:
          </span>
          <span
            class="inputContainer"
          >
            <label
              class="input dark center"
            >
              <input
                inputmode="numeric"
                type="text"
                value="1"
              />
            </label>
          </span>
          <span
            class="display"
          >
            of 3
          </span>
          <button
            class="previous"
          >
            <span
              aria-label="su-angle-left"
              class="su-angle-left"
            />
          </button>
          <button
            class="next"
          >
            <span
              aria-label="su-angle-right"
              class="su-angle-right"
            />
          </button>
        </nav>
      </section>
    </div>
  </div>
</div>
`;

exports[`Should render the list with the correct resourceKey 1`] = `
<div>
  <div
    class="listContainer"
  >
    <div
      class="headerContainer"
    >
      <div
        class="toolbar"
      >
        <label
          class="input dark left collapsed hasAppendIcon"
        >
          <div
            class="prependedContainer dark collapsed"
          >
            <span
              aria-label="su-search"
              class="su-search clickable icon dark iconClickable collapsed"
              role="button"
              tabindex="0"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </label>
        <div>
          <button
            class="button icon"
            type="button"
          >
            <span
              aria-label="su-sort"
              class="su-sort buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div
          class="tableContainer"
        >
          <table
            class="table"
          >
            <thead
              class="header"
            >
              <tr>
                <th
                  class="headerCell"
                >
                  <span>
                    <label
                      class="label"
                    >
                      <span
                        class="switch checkbox light"
                      >
                        <input
                          type="checkbox"
                        />
                        <span />
                      </span>
                    </label>
                  </span>
                </th>
                <th
                  class="headerCell clickable"
                >
                  <button>
                    Description
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="cell small"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="1"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    Description 1
                  </div>
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="cell small"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="2"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    Description 2
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="pagination"
        >
          <span
            class="display"
          >
            :
          </span>
          <span>
            <div
              class="select"
            >
              <button
                class="displayValue dark"
                type="button"
              >
                <div
                  aria-label="10"
                  class="croppedText"
                  title="10"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    1
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    10
                  </div>
                </div>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down toggle"
                />
              </button>
            </div>
          </span>
          <div
            class="loader"
          />
          <span>
            Page:
          </span>
          <span
            class="inputContainer"
          >
            <label
              class="input dark center"
            >
              <input
                inputmode="numeric"
                type="text"
                value="1"
              />
            </label>
          </span>
          <span
            class="display"
          >
            of 3
          </span>
          <button
            class="previous"
          >
            <span
              aria-label="su-angle-left"
              class="su-angle-left"
            />
          </button>
          <button
            class="next"
          >
            <span
              aria-label="su-angle-right"
              class="su-angle-right"
            />
          </button>
        </nav>
      </section>
    </div>
  </div>
</div>
`;
